# MyNet

./: Makefile  Makefile.am  Makefile.in  MyNet.desktop  MyNet.desktop.in  MyNet.glade  MyNet.gladep  MyNet.prj  MyNet.prj.bak  MyNet.pws  README  README.TXT  aclocal.m4  config.h  config.status  configure  configure.in  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
pixmaps/: Makefile  Makefile.am  Makefile.in  MyNet.xpm  connecting.xpm  connecting1.xpm  connecting2.xpm  logo.xpm
po/: Makefile  Makefile.in  POTFILES  POTFILES.in
src/: Makefile  Makefile.am  Makefile.in  Mythread.c  Mythread.h  asm.c  asm.h  callbacks.c  callbacks.h  connect.c  connect.h  eggtrayicon.h  interface.c  interface.c.bak  interface.h  interface.h.bak  main.c  md6.c  md6.h  mdd.c  mdd.h  mynet  openAdd.c  support.c  support.h  tray.c  tray.h
src/.deps/: Mythread.Po  callbacks.Po  connect.Po  eggtrayicon.Po  interface.Po  main.Po  md6.Po  mdd.Po  support.Po  tray.Po
