## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

mynet_pixmapsdir = $(prefix)/@NO_PREFIX_PACKAGE_PIXMAPS_DIR@

mynet_pixmaps_DATA = \
	1.png\
	MyNet.png

EXTRA_DIST = $(mynet_pixmaps_DATA)
