## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES = \
	$(PACKAGE_CFLAGS)

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = mynet

mynet_SOURCES = \
	support.h\
	support.c\
	main.c\
	interface.h\
	interface.c\
	callbacks.h\
	callbacks.c\
	eggtrayicon.c\
	eggtrayicon.h\
	tray.c\
	tray.h\
	connect.c\
	connect.h\
	mdd.c\
	mdd.h\
	md6.c\
	md6.h\
	Mythread.c\
	Mythread.h

mynet_LDFLAGS = 

mynet_LDADD =  \
	$(PACKAGE_LIBS)

